--- a/src/app/shared/layout/main-nav/main-top-nav/main-top-nav.component.html
+++ b/src/app/shared/layout/main-nav/main-top-nav/main-top-nav.component.html
@@ -1,10 +1,13 @@
-<mat-toolbar *ngIf="config" class="mat-elevation-z4" 
-[ngClass]="{'alt_nav': config.altNav, 'main_nav': !config.altNav, 'mat-elevation-z4': config.elevationEnabled}">
-
-<mat-toolbar-row class="p-0">
-  <ng-container *ngIf="!config.altNav else altNav">
-
-    <ng-container *ngIf="config.menuBtnEnabled else backBtn">
+<mat-toolbar *ngIf="config" class="bg-primary-dark toolbar-slim" 
+  [ngClass]="{'mat-elevation-z4': config.elevationEnabled}">
+   
+    <button  *ngIf="config.backFn else menuBtn"
+      (click)="handleFn(config.backFn, config.backFnParams)"
+      mat-icon-button aria-label="Tilbake">
+      <mat-icon class="scale-150">chevron_left</mat-icon>
+    </button>
+    
+    <ng-template #menuBtn>
       <button
         type="button"
         aria-label="Toggle sidenav"
@@ -13,63 +16,35 @@
         fxHide fxShow.xs>
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-    </ng-container>
-
-    <ng-template #backBtn>
-      <button (click)="handleFn(config.backFn, config.backFnParams)"
-       mat-icon-button aria-label="Tilbake">
-          <mat-icon class="scale-150">chevron_left</mat-icon>
-      </button>
     </ng-template>
+      
     <span class="mr-auto">
-      <span class="ml-1" [routerLink]="['/hjem']">{{ config.title }}</span>
+      <ng-container *ngIf="config.title">
+        <span *ngIf="!config.backFn else noLinkTitle" class="ml-1" [routerLink]="['/hjem']">{{ config.title }}</span>
+        <ng-template #noLinkTitle><span class="ml-1">{{ config.title }}</span></ng-template>
+      </ng-container>
+      <mat-icon *ngIf="config.subIcon" class="scale-75">{{ config.subIcon }}</mat-icon>
       <span class="ml-1 mat-caption" >{{ config.subTitle }}</span>
     </span>
-  </ng-container>
 
-  <ng-template #altNav>
-    <span style="margin-right:auto;">
+    <mat-spinner *ngIf="loading$ |  async" diameter="24" color="accent"></mat-spinner>
 
-      <button (click)="handleFn(config.backFn)"
-       mat-icon-button aria-label="Tilbake">
-          <mat-icon class="scale-150">chevron_left</mat-icon>
-      </button>
-
-      <ng-container *ngIf="config.subTitle || config.subIcon">
-        <mat-icon>{{ config.subIcon }}</mat-icon>
-        <small>{{ config.subTitle }}</small>
-      </ng-container>
-
-    </span>
-  </ng-template>
-
-  <mat-spinner *ngIf="loading$ |  async" diameter="24" color="accent"></mat-spinner>
-
-
-  <button mat-icon-button 
-    *ngFor="let button of config.buttons" attr.aria-label="{{ button.aria || 'Knapp' }}" 
-    [ngClass]="button.colorClass || 'color-foreground'"
-    (click)="handleFn(button.callback)">
-      <mat-icon>{{ button.icon }}</mat-icon>
-  </button>
-
-  <ng-container *ngIf="config.searchFn">
-    <button (click)="toggleSearchBar()" mat-icon-button aria-label="Avbryt søk">
-      <mat-icon>search</mat-icon>
+    <button mat-icon-button 
+      *ngFor="let button of config.buttons" attr.aria-label="{{ button.aria || 'Knapp' }}" 
+      [ngClass]="button.colorClass || 'color-foreground'"
+      (click)="handleFn(button.callback)">
+        <mat-icon>{{ button.icon }}</mat-icon>
     </button>
 
-    <app-search-bar [isHidden]="searchBarHidden" (hide)="toggleSearchBar()" (search)="handleFn(config.searchFn, [$event])"></app-search-bar>
-  </ng-container>
+    <button mat-icon-button *ngIf="config.bottomSheetButtons?.length" (click)="openBottomSheet(config.bottomSheetButtons)">
+      <mat-icon>more_vert</mat-icon>
+    </button>
 
-  <button mat-icon-button *ngIf="config.bottomSheetButtons?.length" (click)="openBottomSheet(config.bottomSheetButtons)">
-    <mat-icon>more_vert</mat-icon>
-  </button>
-
-</mat-toolbar-row>
-
-<mat-toolbar-row *ngIf="config.altNav"  class="alt_nav_row">
-  <mat-icon *ngIf="config.icon">{{ config.icon }}</mat-icon>  &nbsp;
-  <span [innerHTML]="config.title"></span>
-</mat-toolbar-row>
-
+</mat-toolbar>
+<mat-toolbar *ngIf="config.multiLineTitle && config.multiLineTitle.length > 0" class="bg-primary-dark toolbar-slim">
+  <span class="ml-4">
+    <ng-container *ngFor="let line of config.multiLineTitle; let last =  last">
+      {{ line }}<br  *ngIf="!last" />
+    </ng-container>
+  </span>
 </mat-toolbar>
