Add multiline title

--- a/src/app/mission/mission-details/mission-details.component.html
+++ b/src/app/mission/mission-details/mission-details.component.html
@@ -1,14 +1,15 @@
 
-  <app-mission-details-view
-    [mission]="mission"
-    [images]="(images$ | async)"
-    [reports]="(reports$ | async)"
-    [notes]="(notes$ | async)"
+    <app-mission-details-view body
+      [mission]="mission"
+      [images]="(images$ | async)"
+      [reports]="(reports$ | async)"
+      [notes]="(notes$ | async)"
 
-    (imagesUploaded)="uploadImages($event)"
-    (imageDeleted)="deleteImage($event)"
-    (noteDeleted)="deleteNote($event)"
-    (noteEdit)="editNote($event)"
-    (reportDeleted)="deleteReport($event)">
-  </app-mission-details-view>
+      (imagesUploaded)="uploadImages($event)"
+      (imageDeleted)="deleteImage($event)"
+      (noteDeleted)="deleteNote($event)"
+      (noteEdit)="editNote($event)"
+      (reportDeleted)="deleteReport($event)">
+    </app-mission-details-view>
+
 
