remove inner nav and new searchbar

--- a/src/app/mission/mission-list/mission-list.component.html
+++ b/src/app/mission/mission-list/mission-list.component.html
@@ -1,24 +1,6 @@
-
-  <app-inner-nav>
-
-    <ng-container header>
-
-      <span class="w-100" fxLayout="row" fxLayoutAlign="space-between center">
-        <app-search-bar (search)="searchMissionList($event)" class="m-2 mat-body max-width" fxFlex></app-search-bar>
-
-        <span>
-          <app-stroked-button
-            *ngFor="let button of innerNavButtons; let last = last" 
-            [ngClass]="last ? '' : 'mr-1'"
-            [config]="button">
-          </app-stroked-button>
-        </span>
-      </span>
-
-    </ng-container>
-    <app-mission-list-view body [missions]="missions$ | async"></app-mission-list-view>
-
-  </app-inner-nav>
-
-
+ <app-mission-list-view 
+  [missions]="missions$ | async" 
+  (search)="searchMissionList($event)"
+  (createMission)="createMission()">
+</app-mission-list-view>
 
