cleanup old files and fix css

--- a/src/app/shared/components/image-viewer-dialog/image-viewer-dialog.component.html
+++ b/src/app/shared/components/image-viewer-dialog/image-viewer-dialog.component.html
@@ -1,7 +1,7 @@
 
 
 
-<mat-toolbar #imageToolBar class="image_toolbar color-accent" fxLayout="row" fxLayoutAlign="space-between center"
+<mat-toolbar #imageToolBar class="toolbar-slim image-toolbar color-accent" fxLayout="row" fxLayoutAlign="space-between center"
 [@showHideToolbar]="toolbarHidden ? 'hide' : 'show'">
     <button mat-icon-button aria-label="Lukk" (click)="onNoClick()">
         <mat-icon class="scale-150">chevron_left</mat-icon>
