--- a/src/app/shared/components/image-viewer-dialog/image-viewer-dialog.component.scss
+++ b/src/app/shared/components/image-viewer-dialog/image-viewer-dialog.component.scss
@@ -17,8 +17,7 @@ img{
     right:$content-margin * 1px;
 }
 
-.image_toolbar{
-    height:$bottom-nav-height!important;
+.image-toolbar{
     position: absolute;
     left:0px;
     z-index:2;
