--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -19,7 +19,11 @@
           <input matInput
             formControlName="Password"
             placeholder="Passord"
-            type="password" />
+            [type]="hidePassword ? 'password' : 'text'"  />
+
+          <mat-icon matSuffix (click)="hidePassword = !hidePassword">
+              {{hidePassword ? 'visibility_off' : 'visibility'}}
+          </mat-icon>
         </mat-form-field>
       </fieldset>
       <button mat-raised-button color="accent" [disabled]="!authForm.valid" type="submit">
