--- a/src/app/profile/password-form/password-form.component.html
+++ b/src/app/profile/password-form/password-form.component.html
@@ -6,18 +6,27 @@
   <mat-card-content>
     <form *ngIf="passwordForm" [formGroup]="passwordForm" fxLayout="column">
       <mat-form-field>
-          <input matInput placeholder="Nåværende passord"  type="password" formControlName="oldPassword">
+          <input matInput placeholder="Nåværende passord" formControlName="oldPassword" [type]="hidePasswords.curr ? 'password' : 'text'" >
+          <mat-icon matSuffix (click)="hidePasswords.curr = !hidePasswords.curr">
+            {{hidePasswords.curr ? 'visibility_off' : 'visibility'}}
+          </mat-icon>
       </mat-form-field>
     
       <mat-form-field>
-        <input matInput placeholder="Nytt passord"  type="password" formControlName="password">
+        <input matInput placeholder="Nytt passord" formControlName="password" [type]="hidePasswords.new ? 'password' : 'text'">
+        <mat-icon matSuffix (click)="hidePasswords.new = !hidePasswords.new">
+          {{hidePasswords.new ? 'visibility_off' : 'visibility'}}
+        </mat-icon>
         <mat-error *ngIf="this.password.invalid">
           Passord må være på minst 7 tegn.
         </mat-error>
       </mat-form-field>
     
       <mat-form-field>
-        <input matInput placeholder="Gjenta nytt passord"  type="password" formControlName="confirmPassword">
+        <input matInput placeholder="Gjenta nytt passord" formControlName="confirmPassword" [type]="hidePasswords.confirm ? 'password' : 'text'">
+        <mat-icon matSuffix (click)="hidePasswords.confirm = !hidePasswords.confirm">
+          {{hidePasswords.confirm ? 'visibility_off' : 'visibility'}}
+        </mat-icon>
       </mat-form-field>
       <mat-error *ngIf="this.error">
         {{ this.error }}
