--- a/src/app/users/user-form/user-form-view/user-form-view.component.html
+++ b/src/app/users/user-form/user-form-view/user-form-view.component.html
@@ -5,12 +5,17 @@
       <mat-form-field *ngIf="this.isCreateForm">
           <input matInput placeholder="Brukernavn"  formControlName="userName" required>
           <mat-error *ngIf="this.userName.invalid">
-            Brukernavn er ett obligatorisk felt på minst 4 tegn.
+            Brukernavn er ett obligatorisk felt på minst 4 tegn. ÆØÅ ikke tillatt.
           </mat-error>
       </mat-form-field>
     
       <mat-form-field *ngIf="isCreateForm">
-        <input matInput placeholder="Passord"  formControlName="password" required>
+        <input matInput placeholder="Passord"  formControlName="password" [type]="hidePassword ? 'password' : 'text'" required>
+
+        <mat-icon matSuffix (click)="hidePassword = !hidePassword">
+          {{hidePassword ? 'visibility_off' : 'visibility'}}
+        </mat-icon>
+
         <mat-error *ngIf="this.password.invalid">
           Passord er ett obligatorisk felt på minst 7 tegn.
         </mat-error>
