small fixes and add search to mission select lists, search now includes ID

--- a/src/app/data-management/employer-form/employer-form-view/employer-form-view.component.html
+++ b/src/app/data-management/employer-form/employer-form-view/employer-form-view.component.html
@@ -19,9 +19,9 @@
   
       <mat-form-field>
         <input ngx-google-places-autocomplete [options]='googleOptions' #placesRef="ngx-places" (onAddressChange)="handleAddressChange($event)"
-        matInput placeholder="Addresse" formControlName="address">
+        matInput placeholder="Adresse" formControlName="address">
         <mat-error *ngIf="this.address.invalid">
-          Addresse kan maks ha 100 tegn.
+          Adresse kan maks ha 100 tegn.
         </mat-error>
       </mat-form-field>
   
