--- a/src/app/mission/mission-list/mission-list-view/mission-list-view.component.html
+++ b/src/app/mission/mission-list/mission-list-view/mission-list-view.component.html
@@ -1,8 +1,8 @@
 
 <div class="p-0 m-1">
 
-    <div class="mt-2 mb-2">
-        <input matInput appInputListener (inputChanged)="onSearch($event)" placeholder="Søk" class="w-100 max-width p-1 pl-3 mat-elevation-z2"
+    <div class="mt-2 mb-2 max-width">
+        <input matInput appInputListener (inputChanged)="onSearch($event)" placeholder="Søk med adresse eller id" class="w-100 p-1 pl-3 mat-elevation-z2"
         style="background:white;border:none;border-radius:10px">
     </div>
 
