--- a/src/app/shared/layout/icon-button/icon-button.component.html
+++ b/src/app/shared/layout/icon-button/icon-button.component.html
@@ -1,9 +1,12 @@
-<button mat-icon-button *ngIf="config"
-    [attr.aria-label]="config.aria"
-    [ngClass]="[
-        config.colorClass ? config.colorClass : '', 
-        config.iconSizeClass ? config.iconSizeClass : ''
-    ]"
-    (click)="handleFn(config.callback)">
-    <mat-icon>{{ config.icon }}</mat-icon>
-</button>
+<ng-container *ngIf="config">
+    <button mat-icon-button *ifRole="config.allowedRoles"
+        [attr.aria-label]="config.aria"
+        [ngClass]="[
+            config.colorClass ? config.colorClass : '', 
+            config.iconSizeClass ? config.iconSizeClass : ''
+        ]"
+        (click)="handleFn(config.callback)">
+        <mat-icon>{{ config.icon }}</mat-icon>
+    </button>
+</ng-container>
+
