--- a/src/app/timesheet/timesheet-list/timesheet-list.component.html
+++ b/src/app/timesheet/timesheet-list/timesheet-list.component.html
@@ -3,7 +3,7 @@
         <ng-container>
             <app-timesheet-list-menu 
                 [filter]="getCurrentFilter()"
-                (filterClick)="openBottomSheet()"
+                (filterClick)="openFilterSheet()"
                 (statusChanged)="changeStatus($event)">
             </app-timesheet-list-menu>
 
