--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -32,4 +32,20 @@ $bottom-nav-height: 44;
   max-width:600px;
 }
 
+@mixin flex-column {
+  height: 100%;  /*allows both columns to span the full height of the browser window*/
+  display: flex;
+  flex-direction: column;  /*places the left and right headers above the bottom content*/
+}
+
+@mixin flex-nav {
+  flex-shrink: 0;
+  display: inline-flex;
+}
+
+@mixin flex-content {
+  flex-grow: 1;  /*ensures that the container will take up the full height of the parent container*/
+  overflow-y: auto;  /*adds scroll to this container*/
+}
+
 
