--- a/src/app/users/user-form/user-form-view/user-form-view.component.html
+++ b/src/app/users/user-form/user-form-view/user-form-view.component.html
@@ -2,7 +2,8 @@
   <mat-card-header class="mb-2">{{ isCreateForm ? 'Legg til' : 'Rediger' }} bruker</mat-card-header>
   <mat-card-content>
     <form *ngIf="userForm" [formGroup]="userForm" fxLayout="column">
-      <mat-form-field *ngIf="this.isCreateForm">
+
+      <mat-form-field>
           <input matInput placeholder="Brukernavn"  formControlName="userName" required>
           <mat-error *ngIf="this.userName.invalid">
             Brukernavn er ett obligatorisk felt på minst 4 tegn. ÆØÅ ikke tillatt.
