cleaned up and created sheet wrappers for all forms

--- a/src/app/mission/components/mission-report-form/mission-report-form.component.html
+++ b/src/app/mission/components/mission-report-form/mission-report-form.component.html
@@ -1,24 +1,4 @@
-<div class="app-card m-2">
-    <mat-card-header class="mb-2">Legg til rapport</mat-card-header>
-    <mat-card-content>
-      <form *ngIf="reportForm" [formGroup]="reportForm" fxLayout="column" fxLayoutAlign="space-around-center">
-        <mat-form-field formGroupName="reportType">
-          <input matInput placeholder="Type rapport" aria-label="Type rapport" formControlName="name" [matAutocomplete]="auto">
-          <mat-autocomplete #auto="matAutocomplete">
-            <mat-option *ngFor="let type of types" [value]="type.name">
-              {{type.name}}
-            </mat-option>
-          </mat-autocomplete>
-        </mat-form-field>
-    
-        <input (change)="changeFile($event)" type="file">
-        <br />
-        <app-submit-button
-          icon="cloud_upload"
-          [disabled]="reportForm.invalid || reportForm.pristine || !this.files"
-          (click)="onSubmit()">
-        </app-submit-button>
-      </form>
-    </mat-card-content>
- </div>
-
+<app-mission-report-form-view
+  [types]="reportTypes$ | async"
+  (formSubmitted)="onSubmit($event)">
+</app-mission-report-form-view>
