--- a/src/app/mission/mission-list/mission-list-view/mission-list-view.component.html
+++ b/src/app/mission/mission-list/mission-list-view/mission-list-view.component.html
@@ -20,6 +20,6 @@
     *ifRole="[Roles.Leder, Roles.Mellomleder]"
     mat-mini-fab aria-label="ny"
     class="action_fab"
-    (click)="onCreate()">
+    (click)="openMissionForm()">
     <mat-icon>add</mat-icon>
 </button>
