--- a/src/app/mission/mission-list/mission-list.component.html
+++ b/src/app/mission/mission-list/mission-list.component.html
@@ -1,6 +1,5 @@
  <app-mission-list-view 
   [missions]="missions$ | async" 
-  (search)="searchMissionList($event)"
-  (createMission)="createMission()">
+  (search)="searchMissionList($event)">
 </app-mission-list-view>
 
