--- a/src/app/mission/components/mission-note-list/mission-note-list.component.html
+++ b/src/app/mission/components/mission-note-list/mission-note-list.component.html
@@ -22,7 +22,7 @@
           </span>
           <ng-container *ifRole="Roles.Leder">
             <span class="w-100" fxLayout="row" fxLayoutAlign="end end" fxLayoutGap="8px">
-              <button (click)="this.noteEdit.emit(note)" mat-icon-button color="primary" aria-label="Rediger notat"><mat-icon>edit</mat-icon></button>
+              <button (click)="openMissionNoteForm(note.id)" mat-icon-button color="primary" aria-label="Rediger notat"><mat-icon>edit</mat-icon></button>
               <button (click)="openDeleteDialog(note.id)" mat-icon-button color="warn" aria-label="Slett notat"><mat-icon>delete</mat-icon></button>
             </span>
           </ng-container>
