--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -5,7 +5,8 @@
       [editButton]="{
         icon: 'edit', 
         allowedRoles: [Roles.Leder], 
-        callback: editUser, params: [user.userName]}">
+        callback: openUserForm, params: [user.userName]
+      }">
   </app-user-card>
 </div>
 
